# Chordsmith

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  NOTICE.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/chordclaw-cli/: Cargo.toml
crates/chordclaw-cli/src/: main.rs
crates/chordclaw-cli/tests/: cli_smoke.rs
crates/chordclaw-core/: Cargo.toml  build.rs
crates/chordclaw-core/benches/: perf.rs
crates/chordclaw-core/src/: formula.rs  identify.rs  lib.rs  notes.rs  parse.rs  scoring.rs  symbol.rs  tests.rs  voicing.rs
crates/chordsmith-cli/: Cargo.toml
crates/chordsmith-cli/src/: main.rs
crates/chordsmith-cli/tests/: cli_smoke.rs
crates/chordsmith-core/: Cargo.toml  build.rs
crates/chordsmith-core/benches/: perf.rs
crates/chordsmith-core/src/: candidate_data_builder.rs  candidate_record.rs  formula.rs  identify.rs  inline_vec.rs  lib.rs  notes.rs  parse.rs  scoring.rs  symbol.rs  tests.rs  voicing.rs
docs/: engine.md
scripts/: chordclaw-version.sh  chordsmith-version.sh  verify-release-version.sh
