[workspace]
members = [
    "crates/chordsmith-core",
    "crates/chordsmith-cli",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nnnickg/chordsmith"
homepage = "https://github.com/nnnickg/chordsmith"

[workspace.dependencies]
chordsmith-core = { path = "crates/chordsmith-core", version = "1.3.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context"] }
clap_complete = "4.6.1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.dev.package.chordsmith-core]
opt-level = 2
