[workspace]
members = [
    "crates/chordclaw-core",
    "crates/chordclaw-cli",
]
resolver = "2"

[workspace.package]
version = "1.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nnnickg/chordclaw"
homepage = "https://github.com/nnnickg/chordclaw"

[workspace.dependencies]
chordclaw-core = { path = "crates/chordclaw-core", version = "1.4.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context"] }
clap_complete = "4.6.1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.dev.package.chordclaw-core]
opt-level = 2
