[package]
name = "chordclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true

[build-dependencies]
serde.workspace = true

[[bench]]
name = "perf"
harness = false

[lints]
workspace = true
